--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "sonner": "^1.7.1",
     "sweetalert2": "latest",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.9"
   },
   "devDependencies": {
     "@types/node": "^22",
